	- Add systemd notification for better systemd integration
	- Fix Issue #621 (by ycaibb)
		* Fix: Null pointer dereference on tcp_client_input_handler_rfc6062data function
	- Fix Issue #600 (by ycaibb)
		* Fix: use-after-free vulnerability on write_to_peerchannel function
	- Fix Issue #601 (by ycaibb)
		* Fix: use-after-free vulnerability on write_client_connection function

24/06/2020 Oleg Moskalenko <mom040267@gmail.com> Mihály Mészáros <misi@majd.eu>
Version 4.5.1.3 'dan Eider':
	- merge PR #575: (by osterik)
		* fix rpm packaging
	- merge PR #576: (by osterik)
		* tell tar to not include the metadata into release
	- merge PR #574: (by DevRockstarZ)
		* change Docker turnserver.conf to latest turnserver.conf
	- merge PR #566: (by bpcurse)
		* Remove reference to SSLv3
	- merge PR #579: (by islamoglus)
		*Ignore MD5 for BoringSSL
	- merge PR #577: (by osterik)
		*build RPM from local folder instead of git repo
	- Fix for CVE-2020-4067
		* STUN response buffer not initialized properly
		* The issue found and reported #583 by Felix Dörre all credits belongs to him.

30/04/2020 Oleg Moskalenko <mom040267@gmail.com> Mihály Mészáros <misi@majd.eu>
Version 4.5.1.2 'dan Eider':
	- merge regression fix: (by Mathieu Brunot)
		* Do not display empty CLI passwd alert if CLI is not enabled
	- merge PR #359: (by bradleythughes)
		* Remove turn_free_simple
		* Remove turn_malloc()
		* Remote turn_realloc()
		* Remote turn_free()
		* Remove turn_calloc()
		* Remove turn_strdup()
		* Remove SSL_NEW() and SSL_FREE()
		* Remove pointer debugging machinery
		* Remove ns_bzero(), ns_bcopy(), and ns_bcmp()
		* Remove [su]{08,16,32,64}bits type defines
	- merge PR #327 (by Alexander Terczka)
		* Strip white-spaces from config file lines end
	- merge PR #386 (by Thibaut ACKERMANN)
		* fix the webadmin ip permission add/delete sql injection
	- merge PR #390 (by Thibaut ACKERMANN)
		* fix mongo driver crash when invalid connection string is used