@@ -10,33 +10,43 @@
 #include <unistd.h>
 #include <stdbool.h>
 
+#ifdef __cplusplus
+extern "C" {
+#endif
 #include <microhttpd.h>
 #include <prom.h>
 #include <promhttp.h>
+#ifdef __cplusplus
+}
+#endif /* __clplusplus */
 
 #define DEFAULT_PROM_SERVER_PORT (9641)
 
-extern prom_gauge_t *turn_status;
+extern prom_counter_t *turn_new_allocation;
+extern prom_counter_t *turn_refreshed_allocation;
+extern prom_counter_t *turn_deleted_allocation;
 
-extern prom_gauge_t *turn_traffic_rcvp;
-extern prom_gauge_t *turn_traffic_rcvb;
-extern prom_gauge_t *turn_traffic_sentp;
-extern prom_gauge_t *turn_traffic_sentb;
+extern prom_counter_t *turn_traffic_rcvp;
+extern prom_counter_t *turn_traffic_rcvb;
+extern prom_counter_t *turn_traffic_sentp;
+extern prom_counter_t *turn_traffic_sentb;
 
-extern prom_gauge_t *turn_total_traffic_rcvp;
-extern prom_gauge_t *turn_total_traffic_rcvb;
-extern prom_gauge_t *turn_total_traffic_sentp;
-extern prom_gauge_t *turn_total_traffic_sentb;
+extern prom_counter_t *turn_traffic_peer_rcvp;
+extern prom_counter_t *turn_traffic_peer_rcvb;
+extern prom_counter_t *turn_traffic_peer_sentp;
+extern prom_counter_t *turn_traffic_peer_sentb;
 
-extern prom_gauge_t *turn_traffic_peer_rcvp;
-extern prom_gauge_t *turn_traffic_peer_rcvb;
-extern prom_gauge_t *turn_traffic_peer_sentp;
-extern prom_gauge_t *turn_traffic_peer_sentb;
+extern prom_counter_t *turn_total_traffic_rcvp;
+extern prom_counter_t *turn_total_traffic_rcvb;
+extern prom_counter_t *turn_total_traffic_sentp;
+extern prom_counter_t *turn_total_traffic_sentb;
 
-extern prom_gauge_t *turn_total_traffic_peer_rcvp;
-extern prom_gauge_t *turn_total_traffic_peer_rcvb;
-extern prom_gauge_t *turn_total_traffic_peer_sentp;
-extern prom_gauge_t *turn_total_traffic_peer_sentb;
+extern prom_counter_t *turn_total_traffic_peer_rcvp;
+extern prom_counter_t *turn_total_traffic_peer_rcvb;
+extern prom_counter_t *turn_total_traffic_peer_sentp;
+extern prom_counter_t *turn_total_traffic_peer_sentb;
+
+#define TURN_ALLOC_STR_MAX_SIZE (20)
 
 #ifdef __cplusplus
 extern "C" {
@@ -45,10 +55,9 @@ extern "C" {
 
 int start_prometheus_server(void);
 
-void prom_set_status(const char* realm, const char* user, unsigned long long allocation, const char* status, unsigned long lifetime);
-void prom_del_status(const char* realm, const char* user, unsigned long long allocation, const char* status);
-void prom_set_traffic(const char* realm, const char* user, unsigned long long allocation, unsigned long rsvp, unsigned long rsvb, unsigned long sentp, unsigned long sentb, bool peer);
-void prom_set_total_traffic(const char* realm, const char* user, unsigned long long allocation, unsigned long rsvp, unsigned long rsvb, unsigned long sentp, unsigned long sentb, bool peer);
+void prom_set_status(int refresh);
+void prom_del_status();
+void prom_set_finished_traffic(const char* realm, const char* user, unsigned long rsvp, unsigned long rsvb, unsigned long sentp, unsigned long sentb, bool peer);
 
 #endif /* TURN_NO_PROMETHEUS */
 
