@@ -40,6 +40,11 @@ Version 4.5.2 'dan Eider':
 		* Fix: use-after-free vulnerability on write_to_peerchannel function
 	- Fix Issue #601 (by ycaibb)
 		* Fix: use-after-free vulnerability on write_client_connection function
+	- Little refactoring prometheus
+		* Fix c++ support
+		* Simplify (as agreed in Issue #666)
+			* Remove session id/allocation labels
+			* Remove per session metrics. We should later add more counters.
 
 24/06/2020 Oleg Moskalenko <mom040267@gmail.com> Mihály Mészáros <misi@majd.eu>
 Version 4.5.1.3 'dan Eider':
